Refactor SCSS variables and update HTML structure for improved readability

--- a/gitco-pilot-øv/index.html
+++ b/gitco-pilot-øv/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Øvelse med git og co-pilot</title>
 </head>
 <body>
-    <h1>er du online?</h1>
+    <header>
+        <li>
+            dansk
+        </li>
+        <li>
+            engelsk
+        </li>
+        <img src="" alt="logo">
+        <img src="" alt="hero">
+       <h1>Communitybaseret læring og fællesskab</h1>
+       <p>Start din rejse mod et større netværk</p> 
+    </header>
+    
 </body>
 </html>
