Refactor code structure for improved readability and maintainability

--- a/gitco-pilot-øv/index.html
+++ b/gitco-pilot-øv/index.html
@@ -13,11 +13,68 @@
         <li>
             engelsk
         </li>
-        <img src="" alt="logo">
-        <img src="" alt="hero">
+        <img src="img/træ.png" alt="logo">
+        <img src="img/banner-billede.jpg" alt="hero">
        <h1>Communitybaseret læring og fællesskab</h1>
        <p>Start din rejse mod et større netværk</p> 
     </header>
-    
+    <div class="info-box">
+        <h1>
+            Bliv en af fællesskabet idag!
+        </h1>
+        <p>
+            Vores fokus er at bringe mennesker sammen og skabe et
+            netværk af ligesindede, som kan dele deres erfaringer og
+            støtte hinanden på forskellige måder. Som medlem af vores
+            fællesskab vil du have adgang til en række fordele, herunder
+            eksklusive tilbud, rabatter, og særlige arrangementer.
+            Derudover kan du opbygge et tæt netværk med andre
+            medlemmer og få mulighed for at udveksle ideer og lære af
+            andres erfaringer.
+            Uanset om du er på udkig efter professionel støtte, personlig
+            udvikling eller bare ønsker at møde nye mennesker, vil vores
+            fællesskab give dig muligheden for at opbygge meningsfulde
+            relationer og have det sjovt undervejs.
+        </p>
+        <div class="card">
+            <h2>Tilmeld dig her!</h2>
+            <form>
+                <label for="navn">Navn:</label><br>
+                <input type="text" id="navn" name="navn" required><br><br>
+
+                <label for="brugernavn">Brugernavn:</label><br>
+                <input type="text" id="brugernavn" name="brugernavn" required><br><br>
+
+                <label for="email">E-mail:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <button type="submit">Tilmeld</button>
+            </form>
+        </div>
+    </div>
+    <div class="section">
+        <h1>
+            Sammen kan vi skabe fantastiske ting
+        </h1>
+        <p>
+            Ved at være en del af vores kreative fællesskab og netværk vil du opdage en verden af
+            muligheder for at udtrykke dig selv og skabe noget fantastisk.
+            Vores fællesskab er fyldt med talentfulde og passionerede mennesker, som brænder for at
+            skabe kunst, musik, design og meget mere. Som medlem vil du have adgang til en bred vifte
+            af ressourcer og støtte, der kan hjælpe dig med at udvikle dine kreative færdigheder og tage
+            dine projekter til nye højder.
+            Vores netværk er også en fantastisk mulighed for at møde andre kreative mennesker, som
+            deler din lidenskab og kan inspirere dig til at udforske nye ideer og kreative udfoldelser. Bliv en
+            del af vores fællesskab og oplev, hvordan sammen kan vi skabe noget virkelig fantastisk! 
+        </p>
+        <button>
+            Se hvordan vi kan arbejde sammen
+        </button>
+    </div>
+    <footer>
+        <button>Information</button>
+        <button>SoMe</button>
+        <button>Søg</button>
+    </footer>
 </body>
 </html>
