gået i gang med stylingen

--- a/gitco-pilot-øv/index.html
+++ b/gitco-pilot-øv/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Øvelse med git og co-pilot</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -16,26 +17,29 @@
         <img src="img/træ.png" alt="logo">
         <img src="img/banner-billede.jpg" alt="hero">
        <h1>Communitybaseret læring og fællesskab</h1>
-       <p>Start din rejse mod et større netværk</p> 
+       <p>Start din rejse mod et større netværk</p>
     </header>
+
     <div class="info-box">
-        <h1>
-            Bliv en af fællesskabet idag!
-        </h1>
-        <p>
-            Vores fokus er at bringe mennesker sammen og skabe et
-            netværk af ligesindede, som kan dele deres erfaringer og
-            støtte hinanden på forskellige måder. Som medlem af vores
-            fællesskab vil du have adgang til en række fordele, herunder
-            eksklusive tilbud, rabatter, og særlige arrangementer.
-            Derudover kan du opbygge et tæt netværk med andre
-            medlemmer og få mulighed for at udveksle ideer og lære af
-            andres erfaringer.
-            Uanset om du er på udkig efter professionel støtte, personlig
-            udvikling eller bare ønsker at møde nye mennesker, vil vores
-            fællesskab give dig muligheden for at opbygge meningsfulde
-            relationer og have det sjovt undervejs.
-        </p>
+        <div>
+            <h1>
+                Bliv en af fællesskabet idag!
+            </h1>
+            <p>
+                Vores fokus er at bringe mennesker sammen og skabe et
+                netværk af ligesindede, som kan dele deres erfaringer og
+                støtte hinanden på forskellige måder. Som medlem af vores
+                fællesskab vil du have adgang til en række fordele, herunder
+                eksklusive tilbud, rabatter, og særlige arrangementer.
+                Derudover kan du opbygge et tæt netværk med andre
+                medlemmer og få mulighed for at udveksle ideer og lære af
+                andres erfaringer.
+                Uanset om du er på udkig efter professionel støtte, personlig
+                udvikling eller bare ønsker at møde nye mennesker, vil vores
+                fællesskab give dig muligheden for at opbygge meningsfulde
+                relationer og have det sjovt undervejs.
+            </p>
+        </div>
         <div class="card">
             <h2>Tilmeld dig her!</h2>
             <form>
